[package]
name = "mainet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = "0.47.0"
tokio = { version = "1.21.2", features = ["full"] }
async-std = { version = "1.6.2", features = ["attributes"] }
